# darient_test

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
apps/transactions/: fields.py  models.py  serializers.py  serializers_utils.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py  0002_initial.py  0003_alter_transaction_backside_image_and_more.py  0004_alter_transaction_details.py  0005_alter_transaction_client.py  0006_alter_transaction_backside_image_and_more.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/utils/: models.py
config/: settings.py  urls.py
