[tool.poetry]
name = "darient-test"
version = "0.1.0"
description = ""
authors = ["Alberto <alberto.llanosco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.1.7"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
djoser = "^2.2.2"
pillow = "^10.2.0"
drf-extra-fields = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
